# Exercicios_Computacao_Grafica

CuboCG/: CMakeLists.txt  main.cpp
ScreenSaver/: CMakeLists.txt  main.cpp
triangulosWithLine/: CMakeLists.txt  main.cpp
